--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -67,7 +67,7 @@
 }
 
 .title-header {
-    width: 571px;
+    // width: 571px;
     // height: 180px;
     display: flex;
     flex-direction: column;
