--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -40,20 +40,20 @@
                             (click)="languageService.setLanguage('English')">
                             <a class="arrow">></a>
                             @if (languageService.language == 'English') {
-                            <a href="#">English</a>
+                            <a>English</a>
                             }
                             @if (languageService.language == 'German') {
-                            <a href="#">Englisch</a>
+                            <a>Englisch</a>
                             }
                         </div>
                         <div class="languageSelection-text" [class.blue]="languageService.getLanguage() == 'German'"
                             (click)="languageService.setLanguage('German')">
                             <a class="arrow">></a>
                             @if (languageService.language == 'English') {
-                            <a href="#">German</a>
+                            <a>German</a>
                             }
                             @if (languageService.language == 'German') {
-                            <a href="#">Deutsch</a>
+                            <a>Deutsch</a>
                             }
                         </div>
                     </div>
