--- a/src/app/burger-menu/burger-menu.component.scss
+++ b/src/app/burger-menu/burger-menu.component.scss
@@ -31,6 +31,10 @@
         font-size: 23px;
         line-height: 27.6px;
     }
+
+    a:hover {
+        color: var(--light-blue);
+    }
 }
 
 .visited {
