--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -13,7 +13,7 @@
 
         <h4>Contact</h4>
         <p>Phone: +41 (0)76 433 499 2<br /><br />
-            E-Mail: hello&commat;pirathib-mahalingam.com</p>
+            E-Mail: hello&commat;pirathib-mahalingam.ch/p>
         <h4>Disclaimer</h4>
         <h6>Responsibility for Content</h6>
         <p>The content of our websites has been created with the utmost care. Nevertheless, we cannot guarantee that the
@@ -46,7 +46,7 @@
 
         <h4>Kontakt</h4>
         <p>Telefon: +41 (0)76 433 499 2<br /><br />
-            E-Mail: hello&commat;pirathib-mahalingam.com</p>
+            E-Mail: hello&commat;pirathib-mahalingam.ch</p>
         <h4>Haftungsausschluss</h4>
         <h6>Haftung für Inhalte</h6>
         <p>Die Inhalte unserer Webseiten wurden mit größter Sorgfalt erstellt. Dennoch können wir keine Gewähr für die
