--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -72,8 +72,8 @@
             </li>
             <li>
                 <p><strong>Website</strong> refers to Pirathib Mahalingam, accessible from <a
-                        href="https://www.pirathib-mahalingam.com" rel="external nofollow noopener"
-                        target="_blank">https://www.pirathib-mahalingam.com</a></p>
+                        href="https://www.pirathib-mahalingam.ch" rel="external nofollow noopener"
+                        target="_blank">https://www.pirathib-mahalingam.ch</a></p>
             </li>
             <li>
                 <p><strong>You</strong> means the individual accessing or using the Service, or the company, or other
@@ -298,7 +298,7 @@
         <p>If you have any questions about this Privacy Policy, You can contact us:</p>
         <ul>
             <li>
-                <p>By email: hello&commat;pirathib-mahalingam.com</p>
+                <p>By email: hello&commat;pirathib-mahalingam.ch</p>
             </li>
             <li>
                 <p>By phone number: +41 (0)76 433 499 2</p>
@@ -377,8 +377,8 @@
             </li>
             <li>
                 <p><strong>Website</strong> bezieht sich auf Pirathib Mahalingam, zugänglich von <a
-                        href="https://www.pirathib-mahalingam.com" rel="external nofollow noopener"
-                        target="_blank">https://www.pirathib-mahalingam.com</a></p>
+                        href="https://www.pirathib-mahalingam.ch" rel="external nofollow noopener"
+                        target="_blank">https://www.pirathib-mahalingam.ch</a></p>
             </li>
             <li>
                 <p><strong>Sie</strong> bezieht sich auf die Person, die auf den Dienst zugreift oder ihn nutzt, oder
@@ -645,7 +645,7 @@
         <p>Wenn Sie Fragen zu dieser Datenschutzerklärung haben, können Sie uns kontaktieren:</p>
         <ul>
             <li>
-                <p>Per E-Mail: hello&commat;pirathib-mahalingam.com</p>
+                <p>Per E-Mail: hello&commat;pirathib-mahalingam.ch</p>
             </li>
             <li>
                 <p>Per Telefonnummer: +41 (0)76 433 499 2</p>
