--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,5 +1,5 @@
 <div id="about-me" class="about-me">
-    <div class="about-me-section" [class.visibleS]="isVisible">
+    <div class="about-me-section" [class.animationFadeLeft]="isVisible">
         <div class="about-me-content">
             @if (languageService.language == 'English') {
             <h2>About me</h2>
@@ -53,7 +53,7 @@
                 </div>
             </div>
         </div>
-        <div class="img-div" [class.visible]="isVisible">
+        <div class="img-div" [class.animationSlideIn]="isVisible">
             <div class="profile-img">
                 <img src="assets/img/piri-profile.png" alt="">
             </div>
