animation on scroll was added

--- a/src/app/above-the-fold/above-the-fold-mobile.component.scss
+++ b/src/app/above-the-fold/above-the-fold-mobile.component.scss
@@ -1,6 +1,7 @@
 @media screen and (max-width: 1440px) {
     .atf {
         // margin-top: 388px;
+        opacity: 0;
     }
 
     .atf-section {
