--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,7 @@
 <div class="portfolio" id="portfolio">
     <div class="portfolio-content">
         <div class="portfolio-header">
-            <div class="portfolio-mobileview">
+            <div class="portfolio-mobileview" [class.animationFadeIn]="isVisible">
                 <h2>
                     <div class="border-left"></div>
                     Portfolio
