--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -32,6 +32,10 @@ p {
     padding-right: 50px;
 }
 
+.portfolio-mobileview {
+    opacity: 0;
+}
+
 .border-left {
     margin-right: 10px;
     width: 109px;
