--- a/src/app/shared/components/footer/footer-mobile.component.scss
+++ b/src/app/shared/components/footer/footer-mobile.component.scss
@@ -4,6 +4,7 @@
         flex-direction: column;
         padding: 37px 50px;
         margin-bottom: 56px;
+        display: none;
     }
 
     .imprint {
