--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer" id="footer">
+<div class="footer" id="footer" [class.animationFadeIn]="isVisible">
     <footer>
         <div class="left-section">
             <a href="#atf"><img src="assets/img/logo.png" alt="Logo"></a>
