--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     border-top: 4px solid var(--light-blue);
     background-color: var(--dark-blue);
+    opacity: 0;
 }
 
 footer {
