--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div *ngIf="isLoading" class="loadingSpinner">
+    <img src="assets/img/loadingSpinner.gif" alt="Loading Spinner">
+</div>
+
+<div *ngIf="!isLoading">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+</div>
