--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div class="contact" id="contact">
     <div class="contact-content">
-        <div class="contact-div">
+        <div class="contact-div" [class.animationFadeIn]="isVisible">
             <!-- <div class="border"></div> -->
             @if (languageService.language == 'English') {
             <h2>Contact</h2>
