--- a/src/app/work/work.component.scss
+++ b/src/app/work/work.component.scss
@@ -21,6 +21,8 @@
     width: 50%;
     display: flex;
     align-items: flex-start;
+    position: relative;
+    opacity: 0;
 
     img {
         max-width: 320px;
@@ -35,6 +37,8 @@
     flex-direction: column;
     justify-content: flex-end;
     gap: 15px;
+    position: relative;
+    opacity: 0;
 }
 
 button {
