--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="isLoading" class="loadingSpinner">
+<!-- <div *ngIf="isLoading" class="loadingSpinner">
     <img src="assets/img/loadingSpinner.gif" alt="Loading Spinner">
-</div>
+</div> -->
 
-<div *ngIf="!isLoading">
+<div>
     <app-header></app-header>
     <router-outlet></router-outlet>
     <app-footer></app-footer>
