--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -19,7 +19,7 @@ section {
     max-width: 1440px;
     height: auto;
     z-index: 4;
-    opacity: 0;
+    // opacity: 0;
 
     img {
         width: 150px;
