--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <section>
-    <header id="header" class="header" [class.animationFadeIn]="isVisible">
+    <header id="header" class="header">
         <a href="#atf" class="logo"><img src="../assets/img/logo.png" alt="Name"></a>
         <div class="header-links">
             <a [ngClass]="{'visited': activeLink === 'about-me-title'}" class="about-me" href="#about-me"
