--- a/src/styles.scss
+++ b/src/styles.scss
@@ -217,3 +217,18 @@ a {
         bottom: 264px;
     }
 }
+
+
+// .loadingSpinner {
+//     width: 100%;
+//     height: 100%;
+//     background-color: var(--dark-blue);
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     z-index: 999;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     overflow: hidden;
+// }
