--- a/src/app/my-skills/my-skills-mobile.component.scss
+++ b/src/app/my-skills/my-skills-mobile.component.scss
@@ -101,6 +101,7 @@
 @media screen and (max-width: 768px) {
     .skills-section {
         max-width: 768px;
+        padding: 37px 25px;
     }
 
     .border {
