--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -2,8 +2,9 @@
     width: 100vw;
     height: 100%;
     max-height: 100vh;
-    margin-top: 344px;
+    // margin-top: 344px;
     // margin-bottom: 200px;
+    padding-top: 114px;
     display: flex;
     justify-content: center;
     scroll-margin-top: 414px;
@@ -15,9 +16,11 @@
     max-width: 1440px;
     height: 100%;
     max-height: 100vh;
+    display: flex;
+    justify-content: center;
     background-image: url('../../assets/img/atf-shape.svg');
     background-size: cover;
-    background-position: center 0%;
+    background-position: center 200px;
     background-repeat: no-repeat;
 }
 
@@ -28,12 +31,24 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    position: relative;
-    bottom: 168px;
+    // position: relative;
+    // bottom: 168px;
+}
+
+.photo-div {
+    width: 100%;
+    height: 100%;
+    background-image: url(../../assets/img/shadows/photo-bgr.svg);
+    background-size: contain;
+    background-position: -44px 112px;
+    background-repeat: no-repeat;
+    z-index: -3;
+    opacity: 0;
 }
 
 .profile-img {
     position: relative;
+    top: 30px;
     height: 620px;
     z-index: -2;
 }
@@ -49,7 +64,7 @@
     text-align: center;
     position: relative;
     right: 100px;
-    bottom: 47px;
+    bottom: 140px;
     opacity: 0;
 }
 
@@ -183,12 +198,12 @@
 
 @keyframes slideInRightTitle {
     0% {
-        right: -1000px;
+        right: -700px;
         opacity: 0;
     }
 
     50% {
-        right: -500px;
+        right: -300px;
         opacity: 1;
     }
 
