--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -9,14 +9,15 @@
     width: 100%;
     max-width: 1440px;
     height: 100%;
+    padding: 37px 0px 37px 100px;
 }
 
 .skills-content {
     display: flex;
+    align-items: center;
 }
 
 .icon-div {
-    margin-left: 100px;
     display: flex;
     flex-wrap: wrap;
     gap: 123px;
@@ -59,13 +60,11 @@
 }
 
 .title-content {
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: center;
-    // align-items: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
     position: relative;
-    right: 50px;
-    top: 80px;
 }
 
 .title-header {
@@ -76,6 +75,7 @@
     align-items: center;
     gap: 35px;
     opacity: 0;
+    margin-right: 100px;
 
     h2 {
         display: flex;
@@ -125,9 +125,9 @@
 }
 
 .border {
-    position: relative;
+    position: absolute;
     top: 56px;
-    left: 563px;
+    right: 0;
     width: 58px;
     border-top: 4px solid var(--purple);
 }
